src/objects/GDPR_Pardot_Subscription_List__mdt.object
<CustomObject>
    <description>List of subscriptions  list displayed in the GDPR portal</description>
    <fields>
        <fullName>Help_text__c</fullName>
        <description>When hover on the checkbox display this text to help user</description>
        <label>Help text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_ID__c</fullName>
        <description>Pardot ID of the list</description>
        <label>Pardot ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Newsletter</fullName>
                    <default>true</default>
                    <label>Newsletter</label>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GDPR Pardot Subscription List</label>
    <pluralLabel>GDPR Pardot Subscription Lists</pluralLabel>
</CustomObject>